# kisyshot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  azure-single.yml  build.ps1  build.sh  main.cc  main.cpp  run.sh
include/: context.h  context_manager.h
include/ast/: arms.h  cfg.h  operator.h  ssa.h  tac.h  token.h  tokens.inc  variable.h
include/ast/syntax/: comment.h  expression.h  function.h  identifier.h  param_list.h  statement.h  syntax_node.h  syntax_ostream_writer.h  syntax_unit.h  type.h  var_declaration.h
include/compiler/: armcode.h  codegen.h  lexer.h  parser.h  sema.h
include/diagnostic/: diagnostic.h  diagnostic_stream.h
include/diagnostics/: compile_errors.h  diagnostic.h  diagnostic_builder.h  diagnostic_stream.h
include/rang/: rang.h
src/: context.cc  context_manager.cc
src/ast/: arms.cc  cfg.cc  ssa.cc  tac.cc  token.cc
src/ast/syntax/: comment.cc  expression.cc  function.cc  identifier.cc  param_list.cc  statement.cc  syntax_node.cc  syntax_ostream_writer.cc  syntax_unit.cc  type.cc  var_declaration.cc
src/compiler/: armcode.cc  codegen.cc  lexer.cc  parser.cc  sema.cc
src/diagnostic/: diagnostic.cc  diagnostic_stream.cc
src/diagnostics/: diagnostic.cc  diagnostic_builder.cc  diagnostic_stream.cc
test/: lex.cc  main.cc  parse.cc  sema.cc  test_all.cc
test/cases/function_test2021/: 024_mod.sy
test/cases/lex/: comment_not_close.sy  full_lex.sy  octal_overflow.sy  string_not_close.sy
test/cases/parse/full/: full1.sy
test/cases/parse/function/: r_paren_not_found.sy  semi_not_found.sy
test/cases/sema/: symbol_test.sy
