cmake_minimum_required(VERSION 3.16)
project(kisyshot)

if (MSVC_VERSION GREATER_EQUAL "1900")
    include(CheckCXXCompilerFlag)
    CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
    if (_cpp_latest_flag_supported)
        add_compile_options("/std:c++latest")
    endif()
    add_compile_definitions(NOMINMAX)
else()
    if(MINGW)
        add_definitions(-D_WIN32_WINNT=0x0600)
    endif()
    if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
        set(CMAKE_CXX_FLAGS "-g -Wall -stdlib=libc++")
    else()
        set(CMAKE_CXX_FLAGS "-g -Wall")
    endif()
    set(CMAKE_CXX_STANDARD 17)
endif()
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/artifacts)
file(GLOB_RECURSE src_relative_path RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/src *.cc)
set(srcs src/context.cc)
foreach(src IN LISTS src_relative_path)
    list(APPEND srcs src/${src})
endforeach()
message(${srcs})
include_directories(include)
add_executable(kisyshot main.cc ${srcs})